<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nfcFragment"
        android:icon="@drawable/ic_baseline_nfc_24"
        android:title="@string/nfc" />

    <item
        android:id="@+id/shareFragment"
        android:icon="@drawable/ic_baseline_qr_code_2_24"
        android:title="@string/share" />

    <item
        android:id="@+id/analyticsFragment"
        android:icon="@drawable/ic_baseline_analytics_24"
        android:title="@string/analytics" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>