<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_logo_white" />

    <TextView
        android:id="@+id/tv_subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/subscriptions"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/purchase_items"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_Contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/sign_out"
        android:textColor="@color/accent2"
        android:textSize="32sp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        app:checkedButton="@+id/btn_profile_on"
        app:selectionRequired="true"
        app:singleSelection="true" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_off"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_on"
            android:textSize="12sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>